K8S/grafana-testing/ingress-test.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: "testing"
  name: "grafana-testing"
  annotations:
    cert-manager.io/issuer: "grafana-testing-issuer"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts: ["grafana-testing.k3s"]
      secretName: "grafana-testing-cert"
  rules:
    - host: "grafana-testing.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "grafana-testing"
                port:
                  number: 3000
